--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "FoodShare-Project",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serv":"nodemon index.js"
+    
   },
   "keywords": [],
   "author": "",
