--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGODB_URI=mongodb://127.0.0.1:27017/FoodShare
+MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/<dbname>?retryWrites=true&w=majority
 SESSION_SECRET=your_secret_key
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-email-password
